# ray-example

./: Changelog.md  Readme.md  cli_tool.py  config.py  pyproject.toml  requirements.txt  setup.py
cli_tool/: cli_tool.py
core/: config.py  init_deploy.py  main.py
core/schema/: base.py
core/schema/api/: basemodel.py
core/schema/database/: base.py
core/tests/: test_performance.py  test_request.py  test_status.py  test_update_on_s3.py
core/utils/: __init__.py  deploy.py  filehandle.py  filehandlers.py  requestTemplate.py  session.py
database/: data.db
example/: deploy.py  deploy_zip.py  main.py
example/config/: ex_01_config.py
example/model/: model_1.py  model_2_composite.py  test_import.py
model/: model_1.py
test/: ex_01_deploy_multiple_model.py  ex_03_deploy_request.py
test_delete/: ex_01.py
test_deploy_api/: main.py
test_model/: model_1.py  model_3.py  model_4.py
test_request/: ex_03.py  ex_04.py
tests/: main.py
tests/test/: ex_02_deploy_different_model.py  ex_03_deploy_request.py  ex_05_deploy_with_working_dir.py  ex_06_deploy_s3.py  ex_07_deploy_with_runtime_env.py  ex_08_deploy_composite.py
tests/test_deploy/: deploy.py  test_deploy.py
tests/test_deploy_api/: main.py
tests/test_model/: model_1.py  model_2.py  model_3.py  model_4.py  model_5.py  model_6.py  model_7.py
tests/test_request/: ex_03.py
tmp/: ingress.py  your_module.py
